--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       🌞
     </button>
     <video autoplay loop muted class="video-background">
-      <source src="/assets/jelly.webm" type="video/webm" />
+      <source src="./assets/jelly.webm" type="video/webm" />
       Your browser does not support the video tag.
     </video>
     <div
